Host can now cancel a round.
